Add data morph panda to star example to motivate section 3.

--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -26958,6 +26958,40 @@ z
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h2 id="Learning-Path">Learning Path<a class="anchor-link" href="#Learning-Path">&#182;</a></h2><ol>
+<li><strong>Why is data visualization necessary?</strong></li>
+<li>Plotting with pandas</li>
+<li>Plotting with Seaborn</li>
+<li>Customizing plots with Matplotlib</li>
+</ol>
+
+</div>
+</div>
+</div>
+</div></section></section><section ><section >
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h2 id="Why-is-data-visualization-necessary?">Why is data visualization necessary?<a class="anchor-link" href="#Why-is-data-visualization-necessary?">&#182;</a></h2><p>So far, we have focused a lot on summarizing the data using statistics. However, summary statistics are not enough to understand the distribution – there are many possible distributions for a given set of summary statistics. Data visualization is necessary to truly understand the distribution:</p>
+<div style="text-align: center; margin-top: -10px;">
+<img width="50%" src="https://raw.githubusercontent.com/stefmolin/data-morph/main/docs/_static/panda-to-star-eased.gif" alt="Data Morph: panda to star" style="min-width: 300px; margin-bottom: -10px;"/>
+<div style="margin: auto 26%;"><small><em>A set of points forming a panda can also form a star without any significant changes to the summary statistics displayed above. (source: <a href="https://github.com/stefmolin/data-morph">Data Morph</a>)</em></small></div>
+</div>
+
+</div>
+</div>
+</div>
+</div></section></section><section ><section >
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h2 id="Learning-Path">Learning Path<a class="anchor-link" href="#Learning-Path">&#182;</a></h2><ol>
+<li>Why is data visualization necessary?</li>
 <li><strong>Plotting with pandas</strong></li>
 <li>Plotting with Seaborn</li>
 <li>Customizing plots with Matplotlib</li>
@@ -33490,6 +33524,7 @@ z
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h2 id="Learning-Path">Learning Path<a class="anchor-link" href="#Learning-Path">&#182;</a></h2><ol>
+<li>Why is data visualization necessary?</li>
 <li>Plotting with pandas</li>
 <li><strong>Plotting with Seaborn</strong></li>
 <li>Customizing plots with Matplotlib</li>
@@ -39876,6 +39911,7 @@ z
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h2 id="Learning-Path">Learning Path<a class="anchor-link" href="#Learning-Path">&#182;</a></h2><ol>
+<li>Why is data visualization necessary?</li>
 <li>Plotting with pandas</li>
 <li>Plotting with Seaborn</li>
 <li><strong>Customizing plots with Matplotlib</strong></li>
