Resize outro slide.

--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -14988,8 +14988,7 @@ all of MD as it is not optimized for dense, information rich UIs.
 
 <style type="text/css">
 .qr-code {
-    min-width: 250px;
-    margin-right: 25px;
+    min-width: 225px;
 }
 a.anchor-link {
    display: none;
@@ -45182,7 +45181,7 @@ z
     <div style="text-align: center; flex-basis: auto; flex-shrink: 2;">
         <img class="qr-code" width="20%" src="https://raw.githubusercontent.com/stefmolin/pandas-workshop/main/media/qr-code.png">
     </div>
-<div style="flex-basis: 45em; flex-grow: 2;">
+<div style="flex-basis: 45em; flex-grow: 2; font-size: 80%;">
     <p>
         <i class="fab fa-github-square fa-2x" style="position: relative; top: 2px;"></i>
       <a style="padding-left: 2px; font-size: 2em;" href="https://github.com/stefmolin" target="_blank" rel="noopener noreferrer">
@@ -45202,7 +45201,7 @@ z
       </a>
     </p>
     <p>
-        <i class="fab fa-linkedin fa-2x" style="position: relative; top: 2px;"></i>
+        <i class="fab fa-linkedin fa-2x" style="position: relative; top: 1px;"></i>
         <a style="padding-left: 2px; font-size: 2em;" href="https://linkedin.com/in/stefanie-molin" target="_blank" rel="noopener noreferrer">
          linkedin.com/in/stefanie-molin
         </a>
