Indicate that Binder might not be available.

--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -15247,7 +15247,7 @@ div.jp-OutputPrompt {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_prerequisites" data-mime-type="text/markdown">
-<h3 id="Prerequisites">Prerequisites<a class="anchor-link" href="#Prerequisites">&#182;</a></h3><p>Consult the <a href="https://github.com/stefmolin/pandas-workshop">README</a> for environment setup instructions or use <a href="https://mybinder.org/v2/gh/stefmolin/pandas-workshop/main?urlpath=lab">this</a> Binder environment.</p>
+<h3 id="Prerequisites">Prerequisites<a class="anchor-link" href="#Prerequisites">&#182;</a></h3><p>Consult the <a href="https://github.com/stefmolin/pandas-workshop">README</a> for environment setup instructions or use <a href="https://mybinder.org/v2/gh/stefmolin/pandas-workshop/main?urlpath=lab">this</a> Binder environment (depending on server availability).</p>
 
 </div>
 </div>
