Update prerequisites slide.

--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -15247,7 +15247,10 @@ div.jp-OutputPrompt {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_prerequisites" data-mime-type="text/markdown">
-<h3 id="Prerequisites">Prerequisites<a class="anchor-link" href="#Prerequisites">&#182;</a></h3><p>Consult the <a href="https://github.com/stefmolin/pandas-workshop">README</a> for environment setup instructions or use <a href="https://mybinder.org/v2/gh/stefmolin/pandas-workshop/main?urlpath=lab">this</a> Binder environment (depending on server availability).</p>
+<h3 id="Prerequisites">Prerequisites<a class="anchor-link" href="#Prerequisites">&#182;</a></h3><ul>
+<li>To follow along with this workshop, you will need to either configure a local environment or use a cloud solution like GitHub Codespaces. Consult the <a href="https://github.com/stefmolin/pandas-workshop#setup-instructions">README</a> for step-by-step setup instructions.</li>
+<li>In addition, you should have basic knowledge of Python and be comfortable working in Jupyter Notebooks; if not, check out the resources <a href="https://github.com/stefmolin/pandas-workshop#prerequisites">here</a> to get up to speed.</li>
+</ul>
 
 </div>
 </div>
