Replace section 3 intro image.

--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -27475,8 +27475,8 @@ z
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput  celltag_id_section-3" data-mime-type="text/markdown">
 <h1 id="Section-3:-Data-Visualization">Section 3: Data Visualization<a class="anchor-link" href="#Section-3:-Data-Visualization">&#182;</a></h1><p>The human brain excels at finding patterns in visual representations of the data; so in this section, we will learn how to visualize data using pandas along with the Matplotlib and Seaborn libraries for additional features. We will create a variety of visualizations that will help us better understand our data.</p>
 <div style="text-align: center;">
-<img width="30%" src="https://data.whicdn.com/images/186942641/original.jpg" alt="Panda hug" style="min-width: 300px"/>
-<div><small><em>Clockwise from top left: Matplotlib, Seaborn, and pandas. (<a href="https://weheartit.com/entry/186942641">source</a>)</em></small></div>
+<img width="30%" src="https://images.unsplash.com/photo-1638898407927-79801f46960b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Peek-a-boo! by Bobby Mc Leod on Unsplash" style="min-width: 300px"/>
+<div><small><em><a href="https://unsplash.com/photos/XmnfnuqPNMY">Source</a></em></small></div>
 </div>
 
 </div>
