--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -45172,7 +45172,7 @@ z
 <div style="text-align: center;">
     <img width="20%" src="https://raw.githubusercontent.com/stefmolin/Hands-On-Data-Analysis-with-Pandas-2nd-edition/master/_img/pandas_drawing.PNG" style="min-width: 200px">
     <div><small>
-        <a href="https://linktr.ee/stefaniemolin">linktr.ee/stefaniemolin</a>
+        <a href="https://stefaniemolin.com">stefaniemolin.com</a>
     </small></div>
 </div>
 
